<resources>
    <string name="app_name">Akipa</string>
    <string name="texto_placeholder">Texto de prueba</string>
    <string name="cd_plato_imagen">Imagen del Plato</string>
    <string name="texto_cantidad">Cantidad</string>
    <string name="texto_agregar_al_carrito">Agregar al Carrito</string>
    <string name="texto_agregar_al_carrito2">Ir A Pagar</string>
    <string name="cd_boton_para_reducir_cantidad_de_platos">Boton para reducir cantidad de platos</string>
    <string name="cd_boton_para_incrementar_la_cantidad_de_platos">Boton para incrementar la cantidad de platos</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="cd_logo_akipa">Logo de Akipa</string>
    <string name="inicio_sesion_menu">Inicio Sesión</string>
    <string name="carrito">Carrito</string>
    <string name="nombre_plato">Plato</string>
    <string name="precio_plato">Precio</string>
    <string name="descripcion_plato">Descripcion</string>
    <string name="agregar_plato">Agregar Plato</string>
    <string name="cd_imagen_para_nuevo_plato">Imagen para nuevo plato</string>
    <string name="menu_agregar_plato">Agregar Plato</string>
    <string name="profile">Perfil</string>
    <string name="mis_pedidos">Mis pedidos</string>
    <string name="perfil_menu">Perfil</string>
    <string name="gestion_de_platos">Gestion de Platos</string>
    <string name="gestion_de_pedidos">Gestion de Pedidos</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="cd_boton_editar_plato">Boton para editar plato</string>
    <string name="cd_boton_eliminar_plato">Boton para eliminar plato</string>
    <string name="editar_plato">Actualizar Plato</string>
    <string name="subtotal">Subtotal</string>
    <string name="tab_titulo_recojo_en_tienda">Recojo en Tienda</string>
    <string name="tab_titulo_delivery">Delivery</string>
    <string name="hora_helper_text">Indique la hora en que estará acercándose al local</string>
    <string name="fecha_helper_text">Indique la fecha en que estará acercándose al local</string>
    <string name="local_helper_text">Indice el local al que se acercará</string>
    <string name="realizar_pedido">Realizar Pedido</string>
    <string name="direccion_helper_text">Indique la dirección a la que se debe llevar su pedido</string>
    <string name="hint_direccion">Dirección</string>
    <string name="referencia_helper_text">Puede indicar una referencia (opcional)</string>
    <string name="hint_referencia">Referencia</string>
    <string name="recojo_en_tienda">Recojo en Tienda</string>
    <string name="delivery">Delivery</string>
    <string name="estado_pedido_en_espera">En Espera</string>
    <string name="estado_pedido_aceptado">Aceptado</string>
    <string name="estado_pedido_rechazado">Rechazado</string>
    <string name="total_a_pagar">TOTAL A PAGAR:</string>
    <string name="fecha_display">Fecha: %1$s</string>
    <string name="hora_display">Hora: %1$s</string>
    <string name="direccion_display">Dirección: %1$s</string>
    <string name="referencia_display">Referencia: %1$s</string>
    <string name="detalle_pedido">Detalle del Pedido</string>
    <string name="direccion_entrega">Dirección de Entrega:</string>
    <string name="referencia_entrega">Referencia de Entrega:</string>
    <string name="fecha">Fecha:</string>
    <string name="hora_entrega">Hora de Entrega:</string>
    <string name="total_pagar">Total a Pagar:</string>
    <string name="platos">Platos</string>
    <string name="precio">Precio</string>
    <string name="cantidad">Cantidad</string>
    <string name="comentario_o_razon_rechazo">Comentario/Razón de Rechazo</string>
    <string name="gestion_pedido_local">Local: %1$s</string>
    <string name="gestion_pedido_fecha">Fecha: %1$s</string>
    <string name="gestion_pedido_direccion">Dirección: %1$s</string>
    <string name="gestion_pedido_hora">Hora: %1$s</string>
    <string name="gestion_pedido_referencia">Referencia: %1$s</string>
    <string name="gestion_pedido_estado">Estado: %1$s</string>
    <string name="no_platos_text">Aún no has agregado un plato a tu carrito</string>
    <string name="ir_lista_platos">Ir a listado de platos</string>
    // dialogs de gestion de platos
    <string name="gestion_plato_eliminar_dialog_message">¿Eliminar Plato?</string>
    <string name="gestion_plato_actualizar_dialog_message">¿Actualizar plato?</string>
    <string name="gestion_plato_dialog_positive_button">Sí</string>
    <string name="gestion_plato_dialog_negative_button">No</string>

    //dialog gestion pedidos
    <string name="gestion_pedido_confirmar_positivo">Confirmar</string>
    <string name="gestion_pedido_confirmar_negativo">Confirmar</string>

    <string name="gestion_pedido_coste_total">Total: %1$s</string>

    // mensajes de validacion a la hora de realizar pedido
    <string name="realizar_pedido_mensaje_validacion_hora">Debe indicar una hora</string>
    <string name="realizar_pedido_mensaje_validacion_fecha">Debe indicar una fecha</string>
    <string name="realizar_pedido_mensaje_validacion_direccion">Debe indicar una dirección</string>
    <string name="realizar_pedido_mensaje_validacion_referencia">Debe indicar una referencia</string>

    // mensajes de validacion para agregar plato
    <string name="agregar_plato_mensaje_validacion_nombre">Debe indicar un nombre</string>
    <string name="agregar_plato_mensaje_validacion_precio">Debe indicar un precio</string>
    <string name="agregar_plato_mensaje_validacion_descripcion">Debe indicar una descripcion</string>
    <string name="agregar_plato_mensaje_validacion_foto">Debe indicar una foto</string>

    <string-array name="akipa_locales">
        <item>Salaverry</item>
        <item>Chacarilla</item>
    </string-array>
</resources>